# f1-predict

./: .bazelrc  BUILD  MODULE.bazel  lightgbm_extension.bzl  test_results.txt
cli/: BUILD  autocomplete.cc  autocomplete.h  colorize.cc  colorize.h
data/: BUILD  constants.proto  constants_maps.cc  constants_maps.h  csv.cc  csv.h  importer.cc  insert.cc  kaggle_importer.cc  proto_utils.cc  proto_utils.h  race_results.proto
data/results/1950/BELGIUM_CIRCUIT/: ALBERTO_ASCARI.textproto  EUGENE_CHABOUD.textproto  GEOFF_CROSSLEY.textproto  JOHNNY_CLAES.textproto  JUAN_FANGIO.textproto  LOUIS_ROSIER.textproto  LUIGI_FAGIOLI.textproto  LUIGI_VILLORESI.textproto  NINO_FARINA.textproto  PHILIPPE_ETANCELIN.textproto  PIERRE_LEVEGH.textproto  RAYMOND_SOMMER.textproto  TONI_BRANCA.textproto  YVES_CABANTOUS.textproto
data/results/1950/CIRCUIT_BREMGARTEN/: ALBERTO_ASCARI.textproto  EUGENE_MARTIN.textproto  FELICE_BONETTO.textproto  HARRY_SCHELL.textproto  JOHNNY_CLAES.textproto  JUAN_FANGIO.textproto  LOUIS_CHIRON.textproto  LOUIS_ROSIER.textproto  LUIGI_FAGIOLI.textproto  LUIGI_VILLORESI.textproto  NELLO_PAGANI.textproto  NINO_FARINA.textproto  PHILIPPE_ETANCELIN.textproto  PRINCE_BIRA.textproto  RAYMOND_SOMMER.textproto  TONI_BRANCA.textproto  TOULO_DE_GRAFFENRIED.textproto  YVES_CABANTOUS.textproto
data/results/1950/GREAT_BRITAIN_CIRCUIT/: BOB_GERARD.textproto  BRIAN_SHAWE_TAYLOR.textproto  CUTH_HARRISON.textproto  JOE_FRY.textproto  (+19 more)
model/: BUILD  data_aggregates.h  generate_training_files.cc  predict.conf  training.conf  writer.cc  writer.h
strings/: BUILD  levenshtein.cc  levenshtein.h  levenshtein_test.cc  parse.cc  parse.h  parse_test.cc  trim.cc  trim.h  trim_test.cc
tools/cpp/: BUILD  CROSSTOOL  cc_toolchain_config.bzl
(+26974 files in other folders)
