""""""

module(name = "f1-predict", version = "1.0")

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "googletest", version = "1.17.0.bcr.1")
bazel_dep(name = "protobuf", version = "33.0")
bazel_dep(name = "rules_cc", version = "0.2.11")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "platforms", version = "1.0.0")

lightgbm_extension = use_extension(
    "//:lightgbm_extension.bzl",
    "lightgbm_extension",
)
use_repo(lightgbm_extension, "lightgbm")

# register_toolchains(
#     "//tools/cpp:cc_toolchain_for_linux_x86_64",
# )
